--- a/style.css
+++ b/style.css
@@ -370,7 +370,7 @@ a {
 
 /* Hero Section Stylings */
 
-.home-hero {
+/* .home-hero {
   background-image: url(./assets//home.jpg);
   background-size: contain;
   background-position: center;
@@ -379,11 +379,64 @@ a {
   height: 100vh;
   min-height: 80rem;
   max-height: 120rem;
+  z-index: 0;
+} */
+/* CSS */
+.home-hero {
+  background-image: url(./assets/home.jpg);
+  background-size: 80% auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+
+#text-animation {
+  position: relative;
+  overflow: hidden;
+  color: white;
+  font-weight: 300;
+  font-size: 3em;
+  letter-spacing: 0.3em;
+}
+
+#text-animation::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 0;
+  height: 100%;
+  border-right: 1px solid #fff;
+  animation: typing 3s steps(20) infinite, blink-caret 1s step-end infinite;
+  animation-delay: 2s; /* Délai avant la répétition de l'animation */
+}
+
+@keyframes typing {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes blink-caret {
+  from, to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: white;
+  }
 }
 
 @media (max-width: 37.5em) {
-  .home-hero {
-    height: unset;
+  #text-animation {
+    font-size: 2em;
+    letter-spacing: 0.3em;
   }
 }
 
@@ -398,6 +451,13 @@ a {
 @media (max-width: 37.5em) {
   .home-hero__heading-primary {
     margin-bottom: 4.5rem;
+  }
+  .home-hero {
+    background-image: url(./assets/home.jpg);
+    background-size: 180% auto;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
   }
 
   .home-hero__btn-theme,
@@ -595,6 +655,7 @@ a {
   width: 100%;
   display: block;
 }
+
 .projects__list-item-img-mob {
   width: 30%;
   display: block;
@@ -700,9 +761,32 @@ a {
 .main-footer__social-link-icon {
   width: 2.5rem;
 }
+
 .logo-devicon {
   font-size: 2.2em;
 }
+
 .date-project {
   color: rgb(190, 190, 190);
+}
+
+.scrolling-text {
+  overflow: hidden;
+  white-space: nowrap;
+  width: 100%;
+}
+
+.scrolling-text span {
+  display: inline-block;
+  animation: marquee 15s linear infinite;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(100%);
+  }
+
+  100% {
+    transform: translateX(-100%);
+  }
 }
