--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 :root {
-  --themeColor: 50, 100, 255;
+  --themeColor: 119,156,153;
   /* Theme Color in (R,G,B) format */
 }
 
@@ -140,18 +140,18 @@ a {
   font-size: 4rem;
   letter-spacing: 1px;
   line-height: 1.3;
-  color: #000;
-  font-weight: 400;
+  color: #3e3a3a;
+  font-weight: 500;
 }
 
 .heading-secondary__sm {
-  font-size: 1.8rem;
+  font-size: 2rem;
   display: block;
   margin-bottom: 2.5rem;
 }
 
 .heading-tertiary {
-  font-size: 3.4rem;
+  font-size: 2rem;
   letter-spacing: 4px;
   line-height: 1.3;
   color: #444;
@@ -180,6 +180,7 @@ a {
   font-size: 1.9rem;
   color: #444;
   line-height: 1.6;
+  font-weight: 300;
 }
 
 .text-primary span {
@@ -228,12 +229,14 @@ a {
 }
 
 .main-header__logo-img-cont {
-  margin-right: 1.5rem;
-  width: 4rem;
-  height: 4rem;
+  margin-right: 2rem;
+  width: 3.2rem;
+  height: 3.2rem;
   overflow: hidden;
+  border: none;
   border-radius: 10rem;
-  background: rgba(var(--themeColor), 1);
+  /* bleu linkedin */
+  background: #0e76a8
 }
 
 .main-header__sm-scr-nav-btn {
@@ -246,6 +249,24 @@ a {
   .main-header__sm-scr-nav-btn {
     display: block;
   }
+
+  .main-header__logo-container {
+    order: -1;
+  }
+
+  .main-header__logo-img-cont {
+    margin-right: 1.5rem;
+    order: 1;
+  }
+
+  .main-header__navigation-links {
+    order: 2;
+  }
+
+  .main-header__sm-scr-nav-btn {
+    order: 3;
+  }
+
 }
 
 .main-header__sm-scr-nav-btn-line {
@@ -404,6 +425,7 @@ a {
 }
 
 @keyframes blink-caret {
+
   from,
   to {
     border-color: transparent;
@@ -750,6 +772,8 @@ a {
 
 .date-project {
   color: rgb(190, 190, 190);
+  font-weight: 200;
+  font-size: 1zm;
 }
 
 .scrolling-text {
